tests/baselines/reference/project/jsFileCompilationDifferentNamesNotSpecified/amd/jsFileCompilationDifferentNamesNotSpecified.errors.txt
DifferentNamesNotSpecified/tsconfig.json(2,24): error TS5102: Option 'out' has been removed. Please remove it from your configuration.
  Use 'outFile' instead.


==== DifferentNamesNotSpecified/tsconfig.json (1 errors) ====
    {
      "compilerOptions": { "out": "test.js" }
                           ~~~~~
!!! error TS5102: Option 'out' has been removed. Please remove it from your configuration.
!!! error TS5102:   Use 'outFile' instead.
    }
==== DifferentNamesNotSpecified/a.ts (0 errors) ====
    var test = 10;